[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "genwg"
authors = [{name = "gottaeat", email = "mss@tutanota.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

dependencies = [
    "PyYAML >= 6.0.0",
    "Jinja2 >= 3.1.4",
]

[project.urls]
Source = "http://github.com/gottaeat/genwg"

[project.scripts]
genwg = "genwg.cli:run"
